# api_password_kimi

./: .gitignore  AGENTS.md  README.md  SPEC.md  更新.md
.github/workflows/: release.yml
vault-paste/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js
vault-paste/src/: App.tsx  styles.css
vault-paste/src-tauri/: Cargo.toml  tauri.conf.json
vault-paste/src-tauri/capabilities/: default.json
vault-paste/src-tauri/src/: clipboard.rs  commands.rs  crypto.rs  database.rs  lib.rs  models.rs  totp.rs
vault-paste/src/components/: AccountCard.tsx  AccountDialog.tsx  MainView.tsx  SearchBar.tsx  TotpCountdown.tsx  UnlockView.tsx
vault-paste/src/hooks/: useToast.tsx
vault-paste/src/types/: index.ts
