[package]
name = "vault-paste"
version = "1.0.0"
description = "本地密码管理器，配合 Windows 剪贴板历史使用"
authors = ["VaultPaste"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"

# Database
rusqlite = { version = "0.32", features = ["bundled", "chrono", "uuid"] }

# Encryption
argon2 = "0.5"
aes-gcm = { version = "0.10", features = ["aes"] }
rand = "0.8"
zeroize = { version = "1", features = ["zeroize_derive"] }

# TOTP
totp-rs = { version = "5", features = ["gen_secret", "otpauth"] }

# Clipboard
arboard = "3"

# Utilities
chrono = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
once_cell = "1"
base64 = "0.22"
hex = "0.4"

[dependencies.tauri-plugin-shell]
version = "2"
